<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/friends_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/background"
        android:layout_width="@dimen/map_width"
        android:layout_height="@dimen/background_height"
        android:layout_marginTop="@dimen/_18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/friends_back" />

    <TextView
        android:id="@+id/top_text"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_28dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_12dp"
        android:text="@string/YouGo"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="@dimen/_24sp"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toTopOf="@+id/background" />

    <TextView
        android:id="@+id/steps_count"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_36dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_4dp"
        android:text="@string/steps_count"
        android:textAlignment="textStart"
        android:textColor="@color/main"
        android:textSize="@dimen/_32sp"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/top_text" />

    <TextView
        android:id="@+id/steps_txt"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_36dp"
        android:layout_marginStart="@dimen/_4dp"
        android:layout_marginTop="@dimen/_4dp"
        android:text="@string/steps_txt"
        android:textColor="@color/main"
        android:textSize="@dimen/_32sp"
        app:layout_constraintStart_toEndOf="@+id/steps_count"
        app:layout_constraintTop_toBottomOf="@+id/top_text" />

    <TextView
        android:id="@+id/pers_count"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_18dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_8dp"
        android:text="@string/pers_count"
        android:textAlignment="textStart"
        android:textColor="@color/main"
        android:textSize="@dimen/_14sp"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/steps_count" />

    <TextView
        android:id="@+id/pers_txt"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_18dp"
        android:layout_marginStart="@dimen/_4dp"
        android:layout_marginTop="@dimen/_8dp"
        android:text="@string/pers_txt"
        android:textColor="@color/gray"
        android:textSize="@dimen/_14sp"
        app:layout_constraintStart_toEndOf="@+id/pers_count"
        app:layout_constraintTop_toBottomOf="@+id/steps_count" />

    <ImageView
        android:id="@+id/line"
        android:layout_width="@dimen/line_width"
        android:layout_height="@dimen/line_height"
        android:layout_marginTop="@dimen/_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pers_txt"
        app:srcCompat="@drawable/gray_line" />

    <Button
        android:id="@+id/stats_button"
        android:layout_width="@dimen/button_width_stats"
        android:layout_height="@dimen/_48dp"
        android:layout_marginEnd="@dimen/_48dp"
        android:backgroundTint="@color/main"
        android:fontFamily="@string/font"
        android:text="@string/stats_s"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sp"
        app:cornerRadius="@dimen/_12dp"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/line" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/_32dp"
        android:layout_height="@dimen/_32dp"
        android:layout_marginStart="@dimen/_8dp"
        app:layout_constraintBottom_toBottomOf="@+id/stats_button"
        app:layout_constraintStart_toEndOf="@+id/stats_button"
        app:layout_constraintTop_toTopOf="@+id/stats_button"
        app:srcCompat="@drawable/share_blue" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="@dimen/map_width"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/background">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/_60dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/_60dp" />

    <ImageView
        android:id="@+id/friends_img"
        android:layout_width="@dimen/_28dp"
        android:layout_height="@dimen/_28dp"
        android:layout_marginStart="@dimen/_56dp"
        android:layout_marginBottom="@dimen/nb_marg_bot"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@drawable/friends_active" />

    <TextView
        android:id="@+id/friends_txt"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/nb_fontheight"
        android:text="@string/friends"
        android:textColor="@color/main"
        android:textSize="@dimen/nb_fontsize"
        app:layout_constraintEnd_toEndOf="@+id/friends_img"
        app:layout_constraintStart_toStartOf="@+id/friends_img"
        app:layout_constraintTop_toBottomOf="@+id/friends_img" />

    <ImageView
        android:id="@+id/stats_img"
        android:layout_width="@dimen/_28dp"
        android:layout_height="@dimen/_28dp"
        android:layout_marginStart="@dimen/_60dp"
        android:layout_marginBottom="@dimen/nb_marg_bot"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/friends_img"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@drawable/stats" />

    <TextView
        android:id="@+id/stats_txt"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/nb_fontheight"
        android:text="@string/stats"
        android:textColor="@color/black"
        android:textSize="@dimen/nb_fontsize"
        app:layout_constraintEnd_toEndOf="@+id/stats_img"
        app:layout_constraintStart_toStartOf="@+id/stats_img"
        app:layout_constraintTop_toBottomOf="@+id/stats_img" />

    <ImageView
        android:id="@+id/main_img"
        android:layout_width="@dimen/_28dp"
        android:layout_height="@dimen/_28dp"
        android:layout_marginStart="@dimen/_60dp"
        android:layout_marginBottom="@dimen/nb_marg_bot"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/stats_img"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/main_txt"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/nb_fontheight"
        android:text="@string/main"
        android:textColor="@color/black"
        android:textSize="@dimen/nb_fontsize"
        app:layout_constraintEnd_toEndOf="@+id/main_img"
        app:layout_constraintStart_toStartOf="@+id/main_img"
        app:layout_constraintTop_toBottomOf="@+id/main_img" />

    <ImageView
        android:id="@+id/profile_img"
        android:layout_width="@dimen/_28dp"
        android:layout_height="@dimen/_28dp"
        android:layout_marginStart="@dimen/_60dp"
        android:layout_marginBottom="@dimen/nb_marg_bot"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/main_img"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/profile_txt"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/nb_fontheight"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="@dimen/nb_fontsize"
        app:layout_constraintEnd_toEndOf="@+id/profile_img"
        app:layout_constraintStart_toStartOf="@+id/profile_img"
        app:layout_constraintTop_toBottomOf="@+id/profile_img" />

    <TextView
        android:id="@+id/blank_back"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60dp"
        android:background="@color/white"
        android:text="@string/blank"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

