<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profile_fragment">

    <ImageView
        android:id="@+id/profile_back_color"
        android:layout_width="@dimen/map_width"
        android:layout_height="@dimen/_420dp"
        app:layout_constraintEnd_toEndOf="@+id/profile_back_picture"
        app:layout_constraintStart_toStartOf="@+id/profile_back_picture"
        app:layout_constraintTop_toTopOf="@+id/profile_back_picture"
        app:srcCompat="@drawable/friends_back" />

    <ImageView
        android:id="@+id/profile_back_picture"
        android:layout_width="@dimen/map_width"
        android:layout_height="@dimen/_190dp"
        android:layout_marginTop="@dimen/_18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_profile" />

    <ImageView
        android:id="@+id/redact"
        android:layout_width="@dimen/_28dp"
        android:layout_height="@dimen/_28dp"
        android:layout_margin="@dimen/_12dp"
        app:layout_constraintBottom_toBottomOf="@+id/profile_back_picture"
        app:layout_constraintEnd_toEndOf="@+id/profile_back_picture"
        app:srcCompat="@drawable/edit_profile" />

    <ImageView
        android:id="@+id/avatar_back"
        android:layout_width="@dimen/avatar_back"
        android:layout_height="@dimen/avatar_back"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintEnd_toEndOf="@+id/avatar"
        app:layout_constraintStart_toStartOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        app:srcCompat="@drawable/white_circle" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatar_diam"
        android:layout_height="@dimen/avatar_diam"
        android:layout_marginStart="@dimen/_18dp"
        android:layout_marginTop="@dimen/_100dp"
        app:layout_constraintStart_toStartOf="@+id/profile_back_picture"
        app:layout_constraintTop_toTopOf="@+id/profile_back_color"
        app:srcCompat="@drawable/avatar" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/profile_name"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="@dimen/_32sp"
        app:layout_constraintStart_toStartOf="@+id/avatar_back"
        app:layout_constraintTop_toBottomOf="@+id/avatar_back" />

    <TextView
        android:id="@+id/description"
        android:layout_width="@dimen/_300dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/profile_description"
        android:textAlignment="textStart"
        android:textColor="@color/gray"
        android:textSize="@dimen/_14sp"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/stats_button"
        android:layout_width="@dimen/_300dp"
        android:layout_height="@dimen/_56dp"
        android:layout_margin="@dimen/_12dp"
        android:backgroundTint="@color/main"
        android:fontFamily="@string/font"
        android:text="@string/profile_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sp"
        app:cornerRadius="@dimen/_12dp"
        app:layout_constraintBottom_toBottomOf="@+id/profile_back_color"
        app:layout_constraintEnd_toEndOf="@+id/profile_back_color"
        app:layout_constraintStart_toStartOf="@+id/profile_back_color" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/_60dp"
        app:spanCount="2" />

    <ImageView
        android:id="@+id/card1"
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/card_height"
        android:layout_margin="@dimen/_12dp"
        app:layout_constraintStart_toStartOf="@+id/profile_back_color"
        app:layout_constraintTop_toBottomOf="@+id/profile_back_color"
        app:srcCompat="@drawable/tab" />

    <ImageView
        android:id="@+id/fire"
        android:layout_width="@dimen/_32dp"
        android:layout_height="@dimen/_32dp"
        android:layout_margin="@dimen/_8dp"
        app:layout_constraintStart_toStartOf="@+id/card1"
        app:layout_constraintTop_toTopOf="@+id/card1"
        app:srcCompat="@drawable/fire_active" />

    <TextView
        android:id="@+id/number_hot"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_36dp"
        android:layout_marginStart="@dimen/_4dp"
        android:text="@string/number_xample"
        android:textColor="@color/black"
        android:textSize="@dimen/_28sp"
        app:layout_constraintBottom_toBottomOf="@+id/fire"
        app:layout_constraintStart_toEndOf="@+id/fire"
        app:layout_constraintTop_toTopOf="@+id/fire" />

    <TextView
        android:id="@+id/text_hot"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20dp"
        android:text="@string/card_hot_bot"
        android:textColor="@color/gray"
        android:textSize="@dimen/_14sp"
        app:layout_constraintEnd_toEndOf="@+id/card1"
        app:layout_constraintStart_toStartOf="@+id/card1"
        app:layout_constraintTop_toBottomOf="@+id/number_hot" />

    <ImageView
        android:id="@+id/card2"
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/card_height"
        android:layout_margin="@dimen/_12dp"
        app:layout_constraintEnd_toEndOf="@+id/profile_back_color"
        app:layout_constraintTop_toBottomOf="@+id/profile_back_color"
        app:srcCompat="@drawable/tab" />

    <ImageView
        android:layout_marginTop="@dimen/_10dp"
        android:id="@+id/medal"
        android:layout_margin="@dimen/_8dp"
        android:layout_width="@dimen/_32dp"
        android:layout_height="@dimen/_32dp"
        app:layout_constraintStart_toStartOf="@+id/card2"
        app:layout_constraintTop_toTopOf="@+id/card2"
        app:srcCompat="@drawable/medal_blank" />

    <TextView
        android:id="@+id/number_medal"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_36dp"
        android:text="@string/number_xample"
        android:layout_marginStart="@dimen/_4dp"
        android:textColor="@color/black"
        android:textSize="@dimen/_28sp"
        app:layout_constraintBottom_toBottomOf="@+id/medal"
        app:layout_constraintStart_toEndOf="@+id/medal"
        app:layout_constraintTop_toTopOf="@+id/medal" />

    <TextView
        android:id="@+id/text_medal"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20dp"
        android:text="@string/card_medal_bot"
        android:textColor="@color/gray"
        android:textSize="@dimen/_14sp"
        app:layout_constraintEnd_toEndOf="@+id/card2"
        app:layout_constraintStart_toStartOf="@+id/card2"
        app:layout_constraintTop_toBottomOf="@+id/number_medal" />

    <ImageView
        android:id="@+id/card3"
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/card_height"
        android:layout_margin="@dimen/_12dp"
        app:layout_constraintStart_toStartOf="@+id/profile_back_color"
        app:layout_constraintTop_toBottomOf="@+id/card1"
        app:srcCompat="@drawable/tab" />

    <ImageView
        android:id="@+id/check"
        android:layout_width="@dimen/_32dp"
        android:layout_height="@dimen/_32dp"
        android:layout_margin="@dimen/_8dp"
        app:layout_constraintStart_toStartOf="@+id/card3"
        app:layout_constraintTop_toTopOf="@+id/card3"
        app:srcCompat="@drawable/check" />

    <TextView
        android:id="@+id/number_check"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_36dp"
        android:layout_marginStart="@dimen/_4dp"
        android:text="@string/pers_number_xample"
        android:textColor="@color/black"
        android:textSize="@dimen/_28sp"
        app:layout_constraintBottom_toBottomOf="@+id/check"
        app:layout_constraintStart_toEndOf="@+id/check"
        app:layout_constraintTop_toTopOf="@+id/check" />

    <TextView
        android:id="@+id/text_check"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20dp"
        android:text="@string/card_check_bot"
        android:textColor="@color/gray"
        android:textSize="@dimen/_14sp"
        app:layout_constraintEnd_toEndOf="@+id/card3"
        app:layout_constraintStart_toStartOf="@+id/card3"
        app:layout_constraintTop_toBottomOf="@+id/number_check" />


</androidx.constraintlayout.widget.ConstraintLayout>